New Updated 29-09-2022New Content

--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultconnectionString": "Data Source=PRABHATHCHANDRA\\SQLEXPRESS;Initial Catalog=ecommerce-app-db;Integrated Security=True"
+  },
+
   "AllowedHosts": "*"
 }
